--- a/views/client/create.pug
+++ b/views/client/create.pug
@@ -2,7 +2,7 @@ extends ../layouts/admin
 
 block content
   div(class="max-w-4xl w-full mx-auto p-8 bg-gray-800 rounded-lg shadow-lg")
-    h2(class="text-lg md:text-2xl font-bold text-center mb-10 text-white")=page
+    h2(class="text-base md:text-4xl font-bold text-center mb-10 text-white")=page
 
     form(action="/client/create" method="POST" class="space-y-8" novalidate)
       input(type="hidden" name="_csrf" value=csrfToken)
