--- a/views/client/panel.pug
+++ b/views/client/panel.pug
@@ -3,7 +3,7 @@ extends ../layouts/admin
 block content
 
   div(class="max-w-7xl mx-auto")
-    h1(class="md:text-4xl font-bold mb-6 text-center text-white") Panel de clientes
+    h1(class="text-base md:text-4xl font-bold mb-6 text-center text-white")=page
 
     div(class="mb-6")
       form(action="/client/search" method="GET")
