--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -2,29 +2,29 @@ extends ../layouts/admin
 
 block content
   div(class="max-w-4xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg")
-    h2(class="text-base md:text-2xl font-bold text-center text-white mb-8")=page
+    h2(class="text-base md:text-4xl font-bold text-center text-white mb-12")=page
     form(action="/device/create" method="POST" class="grid grid-rows-auto gap-6 ")
       input(type="hidden" name="_csrf" value=csrfToken)
       div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
         div 
-          label(for="client_id" class="block text-white font-semibold mb-2") Cliente
-          select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
+          label(for="client_id" class="block text-gray-300 font-semibold mb-2") Cliente
+          select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un cliente-
             each client in clients
               option(value=client.id selected=device.client_id ? client.id == device.client_id : false )=`${client.name} ${client.last_name}`
           if errors
             span(class="text-red-500 text-xs mx-2")=errors.client_id ? errors.client_id.msg : ""
         div 
-          label(for="brand_id" class="block text-white font-semibold mb-2") Marca del Equipo
-          select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
+          label(for="brand_id" class="block text-gray-300 font-semibold mb-2") Marca del Equipo
+          select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona una marca-
             each brand in brands 
               option(value= brand.id selected=device.brand_id ? brand.id == device.brand_id : false)=brand.name
           if errors
             span(class="text-red-500 text-xs mx-2")=errors.brand_id ? errors.brand_id.msg : ""
         div 
-          label(for="model_id" class="block text-white font-semibold mb-2") Modelo del Equipo
-          select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
+          label(for="model_id" class="block text-gray-300 font-semibold mb-2") Modelo del Equipo
+          select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un modelo-
               each model in models 
                 option(value= model.id selected=device.model_id ? model.id == device.model_id : false)=model.name
@@ -33,8 +33,8 @@ block content
 
       div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
         div 
-          label(for="problem_id" class="block text-white font-semibold mb-2") Falla del equipo
-          select(name="problem_id" id="problem_id" class=" cursor-pointer w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
+          label(for="problem_id" class="block text-gray-300 font-semibold mb-2") Falla del equipo
+          select(name="problem_id" id="problem_id" class=" cursor-pointer w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="" class="") -Selecciona un Falla-
             each category in categories
               optgroup(label=category.name class="text-sm cursor-pointer optgroup")
@@ -44,25 +44,25 @@ block content
             span(class="text-red-500 text-xs mx-2")=errors.problem_id ? errors.problem_id.msg : ""
 
         div 
-          label(for="serial_number" class="block text-white font-semibold mb-2") Serial del equipo
-          input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" value=device.serial_number ? device.serial_number : "")
+          label(for="serial_number" class="block text-gray-300 font-semibold mb-2") Serial del equipo
+          input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" value=device.serial_number ? device.serial_number : "")
           if errors
             span(class="text-red-500 text-xs mx-2")=errors.serial_number ? errors.serial_number.msg : ""
 
       div(class="grid grid-cols-1")
       div(class="grid grid-cols-1")
-        label(for="description" class="block text-white font-semibold mb-2") Descripción del equipo
+        label(for="description" class="block text-gray-300 font-semibold mb-2") Descripción del equipo
           small.ml-2.text-gray-500 (Opcional)
-        textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")=device.description ? device.description : ""
+        textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")=device.description ? device.description : ""
         p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
 
       div(class="grid grid-cols-1")
-        label(for="imagen" class="block text-white font-semibold mb-2") Imagen del equipo
-        input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress")
+        label(for="imagen" class="block text-gray-300 font-semibold mb-2") Imagen del equipo
+        input(type="file" name="imagen" id="imagen" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress")
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
-        button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
+        button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-gray-300 text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
 
-        input(type="submit" class=" w-full md:w-3/6 cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-white text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700  hover:scale-90 p-[10px] transition-all duration-300" value="Ingresar Equipo")
+        input(type="submit" class=" w-full md:w-3/6 cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-gray-300 text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700  hover:scale-90 p-[10px] transition-all duration-300" value="Ingresar Equipo")
 
-      //- pre.text-white=JSON.stringify(categories, null, 2)
+      //- pre.text-gray-300=JSON.stringify(categories, null, 2)
