--- a/views/layouts/includes/sidebar-admin.pug
+++ b/views/layouts/includes/sidebar-admin.pug
@@ -61,10 +61,8 @@ aside(id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-gray-800 lg:translate-x
               p(class="text-[15px] ml-2") Panel Cliente
       li(class="space-y-4")
         button(class="submenu-btn flex justify-between items-center w-full text-left ml-1 hover:text-red-500")
-          svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
-            path(stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3")
-
-
+          svg(xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" class="w-6 h-6")
+            path(fill="none" stroke="currentColor" stroke-linejoin="round" d="M8 13H3.5V2.5h9V4M11 12h1M2 13.5h6m1.5-8h4v8h-4z")
 
           p(class="mr-[35px]") Recíbir Equipo
 
@@ -75,27 +73,84 @@ aside(id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-gray-800 lg:translate-x
             viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg")
             path(stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7")
-        ul(class="submenu pl-4 hidden space-y-4")
+        ul(class="submenu hidden space-y-4 ml-3")
           li
-            a(href="/device/create" class="loader flex items-center hover:text-red-500")
+            button(class="submenu-btn flex justify-between items-center w-full text-left ml-1 hover:text-red-500")
               svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
-                path(stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z")
+                path(stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3")
 
-              p.ml-2  Crear Equipo
+              p.mr-3 Ingresar Equipo
+              svg(class="submenu-icon w-5 h-5 transition-transform duration-300" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
+                path(stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7")
+            ul(class="submenu pl-4 hidden space-y-4")
+              li.mt-2
+                a(href="/device/create" class="pl-3 loader flex items-center hover:text-red-500")
+                  svg(xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 32 32")
+                    path(fill="currentColor" d="M4 24a4 4 0 1 1 0 8a4 4 0 0 1 0-8m24 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8M4 26a2 2 0 1 0 0 4a2 2 0 0 0 0-4m24 0a2 2 0 1 0 0 4a2 2 0 0 0 0-4M17 9v6h6v2h-6v6h-2v-6H9v-2h6V9zM4 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8m24 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8m0 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4M4 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4" class="ouiIcon__fillSecondary")
+                    path(fill="currentColor" d="M21.078 29.05c.102.677.3 1.322.582 1.92A16 16 0 0 1 16 32c-1.993 0-3.9-.364-5.66-1.03c.281-.598.48-1.243.582-1.92c1.574.614 3.287.95 5.078.95s3.504-.336 5.078-.95m9.892-18.71A16 16 0 0 1 32 16c0 1.993-.364 3.9-1.03 5.66a7 7 0 0 0-1.92-.582c.614-1.574.95-3.287.95-5.078s-.336-3.504-.95-5.078a7 7 0 0 0 1.92-.582m-29.94 0c.598.281 1.243.48 1.92.582A14 14 0 0 0 2 16c0 1.791.336 3.504.95 5.078a7 7 0 0 0-1.92.582A16 16 0 0 1 0 16c0-1.993.364-3.9 1.03-5.66M16 0c1.993 0 3.9.364 5.66 1.03a7 7 0 0 0-.582 1.92A14 14 0 0 0 16 2c-1.791 0-3.504.336-5.078.95a7 7 0 0 0-.582-1.92A16 16 0 0 1 16 0")
+                
+                  p.pl-2 Crear Equipo
           li
-            a(href="/device/failures" class="loader flex items-center hover:text-red-500")
-              svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
-                path(stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z")
+            button(class="submenu-btn flex justify-between items-center w-full text-left ml-1 hover:text-red-500")
+              svg(xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 48 48" class="w-6 h-6")
+                defs
+                  mask#ipTBatteryFailure0
+                    g(fill="none")
+                      rect(
+                        width="36"
+                        height="20"
+                        x="14"
+                        y="44"
+                        fill="#555"
+                        stroke="#fff"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        rx="2"
+                        transform="rotate(-90 14 44)"
+                      )
+                      path(fill="#fff" d="M20 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2z")
+                      path(
+                        stroke="#fff"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="4"
+                        d="M24 30v-3c2.21 0 4-2.015 4-4.5S26.21 18 24 18s-4 2.015-4 4.5"
+                      )
+                      path(fill="#fff" stroke="#fff" d="M26 35.5a2 2 0 1 1-4 0a2 2 0 0 1 4 0Z")
+                path(fill="currentColor" d="M0 0h48v48H0z" mask="url(#ipTBatteryFailure0)")
 
-              p.ml-2  Crear Falla
 
-          li   
-            a(href="/device/model" class="loader flex items-center hover:text-red-500") 
+              p.mr-10 Falla Equipo
+              svg(class="submenu-icon w-5 h-5 transition-transform duration-300" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
+                path(stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7")
+            ul(class="submenu pl-4 hidden space-y-4")
+              li.mt-2
+                a(href="/device/failures" class="pl-3 loader flex items-center hover:text-red-500")
+                  svg(xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 32 32")
+                      path(fill="currentColor" d="M4 24a4 4 0 1 1 0 8a4 4 0 0 1 0-8m24 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8M4 26a2 2 0 1 0 0 4a2 2 0 0 0 0-4m24 0a2 2 0 1 0 0 4a2 2 0 0 0 0-4M17 9v6h6v2h-6v6h-2v-6H9v-2h6V9zM4 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8m24 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8m0 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4M4 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4" class="ouiIcon__fillSecondary")
+                      path(fill="currentColor" d="M21.078 29.05c.102.677.3 1.322.582 1.92A16 16 0 0 1 16 32c-1.993 0-3.9-.364-5.66-1.03c.281-.598.48-1.243.582-1.92c1.574.614 3.287.95 5.078.95s3.504-.336 5.078-.95m9.892-18.71A16 16 0 0 1 32 16c0 1.993-.364 3.9-1.03 5.66a7 7 0 0 0-1.92-.582c.614-1.574.95-3.287.95-5.078s-.336-3.504-.95-5.078a7 7 0 0 0 1.92-.582m-29.94 0c.598.281 1.243.48 1.92.582A14 14 0 0 0 2 16c0 1.791.336 3.504.95 5.078a7 7 0 0 0-1.92.582A16 16 0 0 1 0 16c0-1.993.364-3.9 1.03-5.66M16 0c1.993 0 3.9.364 5.66 1.03a7 7 0 0 0-.582 1.92A14 14 0 0 0 16 2c-1.791 0-3.504.336-5.078.95a7 7 0 0 0-.582-1.92A16 16 0 0 1 16 0")
+                
+                  p.pl-2 Crear Falla
+          li(class="ml-1")
+            button(class="submenu-btn flex justify-between items-center w-full text-left ml-1 hover:text-red-500")
+              svg(xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 32 32")
+                  path(fill="currentColor" d="M29 24.184V7.816A3 3 0 0 0 31 5c0-1.654-1.346-3-3-3s-3 1.346-3 3c0 .392.08.763.217 1.106L16 14.171L6.783 6.106A3 3 0 0 0 7 5c0-1.654-1.346-3-3-3S1 3.346 1 5c0 1.302.838 2.401 2 2.815v16.37A2.995 2.995 0 0 0 1 27c0 1.654 1.346 3 3 3s3-1.346 3-3a2.97 2.97 0 0 0-.595-1.775l5.333-4.668l2.365 4.138A2.98 2.98 0 0 0 13 27c0 1.654 1.346 3 3 3s3-1.346 3-3c0-.931-.435-1.754-1.103-2.305l2.365-4.138l5.333 4.667A2.97 2.97 0 0 0 25 27c0 1.654 1.346 3 3 3s3-1.346 3-3a3 3 0 0 0-2-2.816M28 4a1.001 1.001 0 0 1 0 2a1 1 0 0 1 0-2m-3.822 5.673l-4.44 7.77l-2.22-1.943zM14.482 15.5l-2.22 1.942l-4.44-7.77zM4 4a1.001 1.001 0 0 1 0 2a1 1 0 0 1 0-2m0 24a1.001 1.001 0 0 1 0-2a1.001 1.001 0 0 1 0 2m1-4.204V8.766l5.726 10.02zM16 28a1.001 1.001 0 0 1 0-2a1.001 1.001 0 0 1 0 2m0-4.015l-2.726-4.771L16 16.829l2.726 2.385zm11-15.22v15.031l-5.726-5.01zM28 28a1.001 1.001 0 0 1 0-2a1.001 1.001 0 0 1 0 2")
+              
 
-              svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
-                path(stroke-linecap="round" stroke-linejoin="round" d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.325.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 0 1 1.37.49l1.296 2.247a1.125 1.125 0 0 1-.26 1.431l-1.003.827c-.293.241-.438.613-.43.992a7.723 7.723 0 0 1 0 .255c-.008.378.137.75.43.991l1.004.827c.424.35.534.955.26 1.43l-1.298 2.247a1.125 1.125 0 0 1-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.47 6.47 0 0 1-.22.128c-.331.183-.581.495-.644.869l-.213 1.281c-.09.543-.56.94-1.11.94h-2.594c-.55 0-1.019-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 0 1-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 0 1-1.369-.49l-1.297-2.247a1.125 1.125 0 0 1 .26-1.431l1.004-.827c.292-.24.437-.613.43-.991a6.932 6.932 0 0 1 0-.255c.007-.38-.138-.751-.43-.992l-1.004-.827a1.125 1.125 0 0 1-.26-1.43l1.297-2.247a1.125 1.125 0 0 1 1.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.086.22-.128.332-.183.582-.495.644-.869l.214-1.28Z")
-                path(stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z")
-              p(class="text-[15px] ml-2") Crear Modelo
+              p.mr-5 Modelo Equipo
+              svg(class="submenu-icon w-5 h-5 transition-transform duration-300" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
+                path(stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7")
+            ul(class="submenu pl-4 hidden space-y-4")
+              li.mt-2
+                a(href="/device/model" class="pl-3 loader flex items-center hover:text-red-500")
+                  svg(xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 32 32")
+                    path(fill="currentColor" d="M4 24a4 4 0 1 1 0 8a4 4 0 0 1 0-8m24 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8M4 26a2 2 0 1 0 0 4a2 2 0 0 0 0-4m24 0a2 2 0 1 0 0 4a2 2 0 0 0 0-4M17 9v6h6v2h-6v6h-2v-6H9v-2h6V9zM4 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8m24 0a4 4 0 1 1 0 8a4 4 0 0 1 0-8m0 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4M4 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4" class="ouiIcon__fillSecondary")
+                    path(fill="currentColor" d="M21.078 29.05c.102.677.3 1.322.582 1.92A16 16 0 0 1 16 32c-1.993 0-3.9-.364-5.66-1.03c.281-.598.48-1.243.582-1.92c1.574.614 3.287.95 5.078.95s3.504-.336 5.078-.95m9.892-18.71A16 16 0 0 1 32 16c0 1.993-.364 3.9-1.03 5.66a7 7 0 0 0-1.92-.582c.614-1.574.95-3.287.95-5.078s-.336-3.504-.95-5.078a7 7 0 0 0 1.92-.582m-29.94 0c.598.281 1.243.48 1.92.582A14 14 0 0 0 2 16c0 1.791.336 3.504.95 5.078a7 7 0 0 0-1.92.582A16 16 0 0 1 0 16c0-1.993.364-3.9 1.03-5.66M16 0c1.993 0 3.9.364 5.66 1.03a7 7 0 0 0-.582 1.92A14 14 0 0 0 16 2c-1.791 0-3.504.336-5.078.95a7 7 0 0 0-.582-1.92A16 16 0 0 1 16 0")
+
+                  p.pl-2 Crear Modelo
+
+          
 
       li(class="space-y-4")
         button(class="submenu-btn flex justify-between items-center w-full text-left ml-1 hover:text-red-500")
