--- a/views/client/panel.pug
+++ b/views/client/panel.pug
@@ -16,8 +16,8 @@ block content
           p(class="text-red-600 font-bold text-sm")=message
 
 
-    div(class="overflow-x-auto")
-      table(class="w-full table-auto bg-gray-800 rounded-md shadow-lg")
+    div(class="overflow-x-auto"  )
+      table(class="w-full table-auto bg-gray-800 rounded-md shadow-lg" data-aos="flip-left")
         thead(class="text-white text-xs sm:text-sm")
           tr(class="bg-gray-700")
             th(class="px-4 py-2") Nombre
