--- a/views/device/details.pug
+++ b/views/device/details.pug
@@ -26,10 +26,7 @@ block content
         div(class="swiper-button-prev text-white") 
 
         div(class="swiper-scrollbar")
-
-      //- Información del dispositivo
-      div(class="text-white space-y-4  font-[PatuaOne]")
-        div(class="cursor-cell ")
+      div(class="cursor-cell")
           if devices.status === "Recibido"
             p(class="py-2 text-center text-sm md:text-lg text-white font-bold bg-indigo-400 rounded")= devices.status
           else if devices.status === "Despachado"
@@ -38,7 +35,13 @@ block content
             p(class="py-2 text-center text-sm md:text-lg text-white font-bold bg-blue-600 rounded")= devices.status
           else if devices.status === "En Reparación"
             p(class="py-2 text-center text-sm md:text-lg text-white font-bold bg-violet-700 rounded")= devices.status
-        h3(class=" text-3xl text-center mb-2 font-bold")= devices.model.name
+          else if devices.status === "Para Reparar"
+            p(class="py-2 text-center text-sm md:text-lg text-white font-bold bg-yellow-700 rounded")= devices.status
+
+      //- Información del dispositivo
+      div(class="text-white space-y-4  font-[PatuaOne] px-2")
+        
+        h3(class=" text-3xl text-center mb-2 mt-2 font-bold")= devices.model.name
         div(class="border-b-4 border-gray-800 w-full")
         div(class="grid grid-cols-1 md:grid-cols-2 space-y-4 md:gap-6 md:space-y-0")
           div
@@ -56,7 +59,9 @@ block content
             textArea(id="description" class="w-full  md:text-base text-sm bg-gray-800 p-2 rounded-lg outline-none" disabled)= devices.description ? devices.description : "No hay descripción"
 
         div
-          a(href=`/repairs/diagnostic/${devices.id}` class="font-[Poppins] inline-block w-full bg-red-700 text-white text-base text-center uppercase py-1 rounded hover:bg-indigo-600 hover:scale-95 shadow-md hover:shadow-gray-400 focus:ring-2 transition-all duration-300 ease-in-out") Enviar a reparación 
+          if devices.status === "Para Reparar" || devices.status === "Recibido"
+            a(href=`/repairs/diagnostic/${devices.id}` class="font-[Poppins] inline-block w-full bg-red-700 text-white text-base text-center uppercase py-2 rounded hover:bg-indigo-600 hover:scale-95 shadow-md hover:shadow-gray-400 focus:ring-2 transition-all duration-300 ease-in-out mb-4") Enviar a reparación
+      
 
 
     if errors
