--- a/views/repairs/diagnostic.pug
+++ b/views/repairs/diagnostic.pug
@@ -5,17 +5,21 @@ block styles
 
 block content
   div(class="max-w-4xl mx-auto")
-    h2(class="text-center text-white text-3xl font-bold")= page
+    h2(class="text-center text-white text-xl md:text-3xl font-bold")= page
     div(class="bg-gray-800 px-8 pt-4 mt-10 rounded-lg shadow-lg")
       from(action="" method="" class="grid grid-rows-auto gap-5")
         div(class="mb-2")
           label(for="diagnosis" class="block text-gray-300 font-bold mb-2") Diagnóstico Inicial
-          textarea(name="diagnosis" id="diagnosis" rows="4" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Describe el problema identificado..." disabled)
+          textarea(name="diagnosis" id="diagnosis" rows="4" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-base md:text-lg focus:ring-red-600" placeholder="Describe el problema identificado..." disabled)=devices.problem.description
 
         div(class="mb-2")
-          label(for="tasks" class="block text-gray-300 font-bold mb-2") Piezas requeridas
-          textarea(name="tasks" id="tasks" rows="4" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Describe las tareas a realizar...")
-        div(class="grid grid-cols-2 gap-4 mb-2")
+          label(for="tasks" class="block text-gray-300 font-bold mb-2") Seleccionar Piezas 
+          div(class="flex items-center gap-4")
+            select(name="parts" id="parts" class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-base md:text-lg focus:ring-red-600")
+             option(value="") -Seleccionar Pieza-
+
+            button(type="button" class="bg-red-600 hover:bg-red-700 text-white font-bold text-sm py-3 px-4 rounded-lg hover:shadow-2xl hover:shadow-gray-400 hover:scale-95 transition-all duration-500") Añadir
+        div(class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-2")
           div(class="mb-2")
             label(for="estimated_cost" class="block text-gray-300 font-bold mb-2") Costo Estimado
             input(type="number" name="estimated_cost" id="estimated_cost" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Ingrese el costo estimado")
@@ -27,9 +31,11 @@ block content
                 svg(class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20")
                   path(d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z")
               input(datepicker type="text" id="delivery_date" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Selecionar fecha")
-        div(class="mb-2 grid grid-cols-2 gap-4")
+        div(class="mb-4 grid grid-cols-1 md:grid-cols-2 gap-4 ")
             button(type="button" id="cancelar-diagnostic" class="w-full cursor-pointer font-bold bg-red-600 hover:bg-red-800 text-gray-300 text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
             input(type="submit" class="w-full cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-gray-300 text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700 hover:scale-90 p-[10px] transition-all duration-300" value="Enviar a Reparación")
+            
+    //- pre.text-white=JSON.stringify(devices, null, 2)
      
 
 
